# prague-traffic-accidents

./: README.md  pyproject.toml
data/: data-analysis.ipynb  mapping.ipynb  ml-prediction.ipynb  nehody_202401-202412.geojson
