[project]
name = "prague-traffic-accident"
version = "0.1.0"
description = "Pražské dopravní nehody"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.5",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.1",
    "matplotlib-inline>=0.1.7",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "torch>=2.6.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
